Needed to capitalize the Ts
Didn't match image source

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <a href="https://en.wikipedia.org/wiki/Kei_truck">Kei Truck</a>
 
   <div class="image-row">
-    <img src="Kei-truck2.jpg" alt="Left Truck">
-    <img src="Kei-truck.jpg" alt="Center Truck">
-    <img src="Kei-truck3.jpg" alt="Right Truck">
+    <img src="Kei-Truck2.jpg" alt="Left Truck">
+    <img src="Kei-Truck.jpg" alt="Center Truck">
+    <img src="Kei-Truck3.jpg" alt="Right Truck">
   </div>
 </body>
 </html>
