--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
     <img src="Kei-Truck.jpg" alt="Center Truck">
     <img src="Kei-Truck3.jpg" alt="Right Truck">
   </div>
+  <footer>
+    <p>&copy; 2025 Hayden Lasher - Kei Truck Website</p>
+  </footer>
 </body>
 </html>
