--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
   <title>Kei Truck Gallery</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body id="top">
   <header class="site-header">
     <h1>Kei Truck Gallery</h1>
     <nav aria-label="Main">
@@ -40,7 +40,7 @@
       </div>
     </section>
   </main>
-
+<p class="top-link"><a href="#top">Back to top</a></p>
   <footer class="site-footer">
     <p>&copy; 2025 Hayden Lasher</p>
   </footer>
