--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!--External link opens in a NEW TAB-->
       <li>
 <a href="https://en.wikipedia.org/wiki/Kei_truck"
-   target="_blank" rel="nonopener noreferrer"></a></li></u1></nav></header>
+   target="_blank" rel="nonopener noreferrer">What is a Kei Truck?</a></li></u1></nav></header>
 <main class="container">
   <p class="lead">Let me introduce to you... The Kei Truck!</p>
 <section class="card" id="one">
@@ -33,7 +33,6 @@
     <img src="Kei-Truck.jpg" alt="Classic white Honda Acty Kei truck" />
     <img src="Kei-Truck3.jpg" alt="Pink show Kei trucdk" />
   </div>
-  <p class="top-link"><a href="#top">Back to top</a>></p>
   </main>
   <footer class="site-footer">
     <p>&copy; 2025 Hayden Lasher - Kei Truck Website </p>
