--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <h2 id="specs">Practical, Affordable, Iconic</h2>
   <p>Born in Japan's post-war economy for farmers and small businesses, Kei Trucks are compact, customizable, and rediculously useful.</p>
   <!--Placeholder link to a section on this same page-->
-  <p><a class="placeholder" href="#specs">Jump to the specs headline (placeholder link)</a></p>
+  <p><a class="placeholder" href="#specs">WARNING:State by state legality in the US! (placeholder link)</a></p>
   </section>
   <!--Scalable image row-->
   <div class="image-row">
