--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
   <h2 id="specs">Practical, Affordable, Iconic</h2>
   <p>Born in Japan's post-war economy for farmers and small businesses, Kei Trucks are compact, customizable, and rediculously useful.</p>
   <!--Placeholder link to a section on this same page-->
-  <p><a class="placeholder" href="#specs">WARNING:State by state legality in the US! (placeholder link)</a></p>
+  <p><a class="placeholder" href="https://worldpopulationreview.com/state-rankings/kei-truck-legal-states"
+    target="_blank"
+    rel="noopener noreferrer">WARNING:State by state legality in the US! (placeholder link)</a></p>
   </section>
   <!--Scalable image row-->
   <div class="image-row">
