--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!--Placeholder link to a section on this same page-->
   <p><a class="placeholder" href="https://worldpopulationreview.com/state-rankings/kei-truck-legal-states"
     target="_blank"
-    rel="noopener noreferrer">WARNING:State by state legality in the US! (placeholder link)</a></p>
+    rel="noopener noreferrer">WARNING:State by state legality in the US!</a></p>
   </section>
   <!--Scalable image row-->
   <div class="image-row">
