--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery (2–3 Columns)</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a class="active" href="about.html">About</a></li>
         <li>
           <a href="https://en.wikipedia.org/wiki/Kei_truck"
@@ -23,7 +23,6 @@
       </ul>
     </nav>
   </header>
-
   <main class="container">
     <section class="card">
       <h2>Under Construction</h2>
@@ -31,7 +30,6 @@
       <p>Meanwhile, check the <a href="gallery.html">Gallery</a> or go <a href="index.html">Home</a>.</p>
     </section>
   </main>
-
   <footer class="site-footer">
     <p>&copy; 2025 Hayden Lasher</p>
   </footer>
