--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="gallery.html">Gallery (2–3 Columns)</a></li>
+        <li><a class="active" href="gallery.html">Gallery</a></li>
         <li><a href="about.html">About</a></li>
         <li>
           <a href="https://en.wikipedia.org/wiki/Kei_truck"
@@ -23,20 +23,18 @@
       </ul>
     </nav>
   </header>
-
   <main class="container">
     <section class="card">
       <h2>Build Ideas</h2>
       <!-- 3-column grid on desktop, 2 on tablets, 1 on phones -->
       <div class="grid">
         <!-- Reuse your images or add more; all are scalable -->
-        <figure><img src="Kei-Truck2.jpg" alt="Overland kei truck" /><figcaption>Overland build</figcaption></figure>
-        <figure><img src="Kei-Truck.jpg"  alt="Stock kei truck" /><figcaption>Stock workhorse</figcaption></figure>
-        <figure><img src="Kei-Truck3.jpg" alt="Show kei truck" /><figcaption>Show truck</figcaption></figure>
-        <!-- Duplicate rows as needed -->
-        <figure><img src="Kei-Truck2.jpg" alt="Overland kei truck" /><figcaption>Trail-ready</figcaption></figure>
-        <figure><img src="Kei-Truck.jpg"  alt="Stock kei truck" /><figcaption>Daily duty</figcaption></figure>
-        <figure><img src="Kei-Truck3.jpg" alt="Show kei truck" /><figcaption>Stanced</figcaption></figure>
+        <figure><img src="Kei-Truck-Business.jpg" alt="Open a small business!" /><figcaption>Overland build</figcaption></figure>
+        <figure><img src="Kei-Truck-Camp.jpg"  alt="Get away from it all and go camping!" /><figcaption>Stock workhorse</figcaption></figure>
+        <figure><img src="Kei-Truck-Fire.jpg" alt="Fun fact: Japan can use these smaller fire engines based on Kei trucks to use in narrow or hard to reach areas!" /><figcaption>Show truck</figcaption></figure>
+        <figure><img src="Kei-Truck-Scissor.jpg" alt="OSHA doesn't need to know EVERYTHING, right?"/><figcaption>Trail-ready</figcaption></figure>
+        <figure><img src="Kei-Truck-Snow.jpg"  alt="They Canadian in me breathes heavy at this..." /><figcaption>Daily duty</figcaption></figure>
+        <figure><img src="Kei-Truck-Surf.jpg" alt="Surfs up!🤙 (Nobody's going to believe I actually surf.)" /><figcaption>Stanced</figcaption></figure>
       </div>
     </section>
   </main>
