--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
         <figure><img src="Kei-Truck-Camp.jpg"  alt="Camping Kei Truck"/><figcaption>Get away from it all and go camping!</figcaption></figure>
         <figure><img src="Kei-Truck-Fire.jpg" alt="Fire engine Kei Truck"/><figcaption>Fun fact: Japan can use these smaller fire engines based on Kei trucks to use in narrow or hard to reach areas!</figcaption></figure>
         <figure><img src="Kei-Truck-Scissor.jpg" alt="Scissor lift Kei truck"/><figcaption>OSHA doesn't need to know EVERYTHING, right?</figcaption></figure>
-        <figure><img src="Kei-Truck-Snow.jpg"  alt="Kei truck modified for snow"/><figcaption>They Canadian in me breathes heavy at this...</figcaption></figure>
+        <figure><img src="Kei-Truck-Snow.jpg"  alt="Kei truck modified for snow"/><figcaption>The Canadian in me breathes heavy at this...</figcaption></figure>
         <figure><img src="Kei-Truck-Surf.jpg" alt="Surfboard rack Kei truck"/><figcaption>Surfs up!🤙🏼 (Nobody's going to actually believe that I surf.)</figcaption></figure>
       </div>
     </section>
