--- a/about.html
+++ b/about.html
@@ -25,13 +25,14 @@
       <img src="Me.jpg" alt="Photo of Hayden Lasher" class="profile-pic">
       <p>
         My name is Hayden Lasher. Right after high school, I joined the Marine Corps where I became an aviation ordnance systems technician (built and fixed the weaponry that went on aircrafts), then became a shooting instructor on the range for both rifle and psitol.
-        I was also a wrestling coach for years, as it was a huge passion of mine. After I left the Marine corps, I recieved my 2 year degree in automotive technology from Shoreline Community College, as well as my @ year diesel technology degree. I worked as an automotive/diesel mechanic for a few years before I wanted to continire my education. More recently In 2021, I started my 2 year welding degree from Green River Community College.
+        I was also a wrestling coach for years, as it was a huge passion of mine. After I left the Marine corps, I recieved my 2 year degree in automotive technology from Shoreline Community College, as well as my 2 year diesel technology degree. I worked as an automotive/diesel 
+        mechanic for a few years before I wanted to continue my education. More recently, in 2021 I started my 2 year welding degree from Green River Community College.
         Being a blue collar guy most of my life, my body is giving up on me, so that's why I've decided to attempt a 4 year degree for cybersecurity, here at Olympic college.
       </p>
       <h2>How I Fell in Love with Kei Trucks</h2>
       <p>
        I have an absolute love of the Kei Truck that stems to around 2018. I was freshly out of the Marine Corps, and used my GI bill to attend automotive school to earn my 2 year degree in Automotive Technology.
-        My first job as an auto tech was at an Acura dealership in Lynwood, WA. As many of you might know, the Acura brand is just Hondas luxury brand. Thus, my excitement when a Honda Acty (Hondas Kei truck) pulled in for a messed up stering column.
+        My first job as an auto tech was at an Acura dealership in Lynwood, WA. As many of you might know, the Acura brand is just Hondas luxury brand. Thus, my excitement when a Honda Acty (Hondas Kei truck) pulled in for a messed up steering column.
         This compact, simple, and unique looking vehicle caught my eye. I walked up to it when I noticed the steering wheel was on the right side of the car instead. A very normal thing in Japan, but not here.
         I ended up talking to the owner about it for a while, and he explained in detail, all the plans he had for it. It was a little work truck he used around his farm a lot because of its hydraulic dump bed. (You mean the bed can lift up and dump things out??)
         He went on to tell me about how he had plans to convert it into a little camper for his son. Hearing about how simple of a vehicle this was, and how the only limits are the stretch of your imagination, I needed to learn more. I loved this truck.
