--- a/about.html
+++ b/about.html
@@ -39,7 +39,15 @@
       </p>
       <h2>Things to Watch Out For</h2>
       <p>
-        Place Holder.
+     While Kei trucks are awesome little machines, there are a few things to keep in mind before diving in. 
+     First off, legality varies from state to state here in the U.S. Some states allow them on all roads, 
+     others limit them to off-road or agricultural use, so always double-check your local DMV rules. 
+     You’ll also hear about the “25-year rule,” which means imported vehicles must be at least 25 years old 
+     to legally meet U.S. import standards without major modifications. That’s why most Kei trucks you’ll 
+     find for sale are older models from the ’90s or early 2000s. Even though they’re small and look cheap, 
+     the price often runs between $7,000 and $10,000 once you factor in shipping, customs fees, and import costs. 
+     They’re still a great value for what you get. Unique character, amazing practicality, and tons of personality,
+     but it’s good to know what you’re getting into before buying one.
       </p>
     </section>
   </main>
