--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
       <h2>Things to Watch Out For</h2>
       <p>
      While Kei trucks are awesome little machines, there are a few things to keep in mind before diving in. 
-     First off, legality varies from state to state here in the U.S. Some states allow them on all roads, 
+     First off, legality varies from state to state here in the U.S (see state-by-state link on home page). Some states allow them on all roads, 
      others limit them to off-road or agricultural use, so always double-check your local DMV rules. 
      You’ll also hear about the “25-year rule,” which means imported vehicles must be at least 25 years old 
      to legally meet U.S. import standards without major modifications. That’s why most Kei trucks you’ll 
