--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav aria-label="Main">
     <u1 class="nav">
       <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="gallery.html">Gallery (2-3 Columns)</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
       <li><a href="about.html">About</a></li>
       <!--External link opens in a NEW TAB-->
       <li>
@@ -23,7 +23,11 @@
   <p class="lead">Let me introduce to you... The Kei Truck!</p>
 <section class="card" id="one">
   <h2 id="specs">Practical, Affordable, Iconic</h2>
-  <p>Born in Japan's post-war economy for farmers and small businesses, Kei Trucks are compact, customizable, and rediculously useful.</p>
+  <p>Kei trucks, or “Kei-class light trucks,” were originally designed in Japan to fit strict size and tax regulations 
+    while giving farmers and tradesmen an affordable, efficient way to get work done. Over the decades, they’ve evolved 
+    into incredibly versatile machines — capable of hauling loads, navigating tight streets, and being modified into everything 
+    from off-road rigs to mobile cafes. Today, they’re popular among collectors and DIY enthusiasts worldwide, blending utility, 
+    character, and a touch of nostalgia into one unmistakably Japanese icon.</p>
   <!--Placeholder link to a section on this same page-->
   <p><a class="placeholder" href="https://worldpopulationreview.com/state-rankings/kei-truck-legal-states"
     target="_blank"
