--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
         <figure><img src="Kei-Truck-Surf.jpg" alt="Surfboard rack Kei truck"/><figcaption>Surfs up!🤙🏼 (Nobody's going to actually believe that I surf.)</figcaption></figure>
         <figure><img src="Heavy_duty_Kei_Truck.jpg" alt="Heavy duty Kei truck"/><figcaption>All-terrain means ALL terrain!</figcaption></figure>
         <figure><img src="Drag_Kei_Truck.jpg" alt="Drag racing Kei truck"/><figcaption>From 0 to 60... eventually...</figcaption></figure>
-        <figure><img src="Drift_Kei_Truck.jpg" alt="Drift racing Kei truck"/><figcaption>"Do you know what DK stand for?" "Donkey Kong?" "No. Drift King"</figcaption></figure>
+        <figure><img src="Drift_Kei_truck.jpg" alt="Drift racing Kei truck"/><figcaption>"Do you know what DK stand for?" "Donkey Kong?" "No. Drift King"</figcaption></figure>
       </div>
     </section>
   </main>
