--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <body id="top">
   <!--Global header and nav (Same on all pages)-->
   <header class="site-header">
-  <h1>Hayden Lasher's Website</h1>
+  <h1>
+    <i class="fa-solid fa-truck-pickup"></i>
+    Hayden Lasher's Website</h1>
   <nav aria-label="Main">
     <u1 class="nav">
       <li><a class="active" href="index.html">Home</a></li>
