--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <header class="site-header">
   <h1>
     <i class="fa-solid fa-truck-pickup"></i>
-    Hayden Lasher's Website</h1>
+    Hayden Lasher's Website
+    <i class="fa-solid fa-truck-pickup"></i></h1>
   <nav aria-label="Main">
     <u1 class="nav">
       <li><a class="active" href="index.html">Home</a></li>
