--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <h1>
     <i class="fa-solid fa-truck-pickup"></i>
     Hayden Lasher's Website
-    <i class="fa-solid fa-truck-pickup"></i></h1>
+    <i class="fa-solid fa-truck-pickup fa-flip-horizontal"></i></h1>
   <nav aria-label="Main">
     <u1 class="nav">
       <li><a class="active" href="index.html">Home</a></li>
