--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,9 @@
 </head>
 <body id="top">
   <header class="site-header">
-    <h1>Kei Truck Gallery</h1>
+    <h1>
+      <i class="fa-solid fa-truck-monster"></i>
+      Kei Truck Gallery</h1>
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
