--- a/about.html
+++ b/about.html
@@ -16,7 +16,9 @@
 </head>
 <body id="top">
   <header class="site-header">
-    <h1>About This Site</h1>
+    <h1>
+      <i class="fa-solid fa-id-card"></i>
+      About This Site</h1>
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
