--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
   <header class="site-header">
     <h1>
       <i class="fa-solid fa-id-card"></i>
-      About This Site</h1>
+      About This Site
+      <i class="fa-solid fa-id-card"></i></h1>
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
