--- a/gallery.html
+++ b/gallery.html
@@ -18,7 +18,8 @@
   <header class="site-header">
     <h1>
       <i class="fa-solid fa-truck-monster"></i>
-      Kei Truck Gallery</h1>
+      Kei Truck Gallery
+      <i class="fa-solid fa-truck-monster fa-flip-horizontal"></i></h1>
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
