--- a/gallery.html
+++ b/gallery.html
@@ -24,6 +24,7 @@
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="gallery.html">Gallery</a></li>
+        <li><a href="guide.html">Guide</a></li>
         <li><a href="about.html">About</a></li>
         <li>
           <a href="https://en.wikipedia.org/wiki/Kei_truck"
