--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <u1 class="nav">
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="guide.html">Guide</a></li>
       <li><a href="about.html">About</a></li>
       <!--External link opens in a NEW TAB-->
       <li>
