--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hayden Lasher - Kei Truck</title>
+  <title>Kei Truck Buying Guide</title>
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,47 +12,107 @@
   <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <!-- CSS -->
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body id="top">
   <header class="site-header">
     <h1>
-      <i class="fa-solid fa-truck-monster"></i>
-      Kei Truck Gallery
-      <i class="fa-solid fa-truck-monster fa-flip-horizontal"></i></h1>
+      <i class="fa-solid fa-map-signs" aria-hidden="true"></i>
+      Kei Truck Buying Guide
+    </h1>
     <nav aria-label="Main">
       <ul class="nav">
         <li><a href="index.html">Home</a></li>
-        <li><a class="active" href="gallery.html">Gallery</a></li>
-        <li><a href="guide.html">Guide</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a class="active" href="guide.html">Guide</a></li>
         <li>
           <a href="https://en.wikipedia.org/wiki/Kei_truck"
              target="_blank" rel="noopener noreferrer">
-            What is a Kei Truck? ↗
-          </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="container">
-    <section class="card">
-      <h2>Build Ideas</h2>
-      <!-- 3-column grid on desktop, 2 on tablets, 1 on phones -->
-      <div class="grid">
-        <figure><img src="Kei-Truck-Business.jpg" alt="Small business kei truck"/><figcaption>Open a small business!</figcaption></figure>
-        <figure><img src="Kei-Truck-Camp.jpg"  alt="Camping Kei Truck"/><figcaption>Get away from it all and go camping!</figcaption></figure>
-        <figure><img src="Kei-Truck-Fire.jpg" alt="Fire engine Kei Truck"/><figcaption>Fun fact: Japan can use these smaller fire engines based on Kei trucks to use in narrow or hard to reach areas!</figcaption></figure>
-        <figure><img src="Kei-Truck-Scissor.jpg" alt="Scissor lift Kei truck"/><figcaption>OSHA doesn't need to know EVERYTHING, right?</figcaption></figure>
-        <figure><img src="Kei-Truck-Snow.jpg"  alt="Kei truck modified for snow"/><figcaption>The Canadian in me breathes heavy at this...</figcaption></figure>
-        <figure><img src="Kei-Truck-Surf.jpg" alt="Surfboard rack Kei truck"/><figcaption>Surfs up!🤙🏼 (Nobody's going to actually believe that I surf.)</figcaption></figure>
-        <figure><img src="Heavy_duty_Kei_Truck.jpg" alt="Heavy duty Kei truck"/><figcaption>All-terrain means ALL terrain!</figcaption></figure>
-        <figure><img src="Drag_Kei_Truck.jpg" alt="Drag racing Kei truck"/><figcaption>From 0 to 60... eventually...</figcaption></figure>
-        <figure><img src="Drift_Kei-truck.jpg" alt="Drift racing Kei truck"/><figcaption>"Do you know what DK stand for?" "Donkey Kong?" "No. Drift King"</figcaption></figure>
+            What is a Kei Truck?</a></li></ul></nav></header>
+  <main class="container guide-layout">
+    <!-- Hero card -->
+    <section class="card guide-hero">
+      <p class="guide-tagline">Thinking about a Kei truck?</p>
+      <h2>Pick the truck that matches how you’ll actually use it</h2>
+      <p>Kei trucks look tiny and cute, but they are real workhorses. Before you import one
+        or buy one locally, it helps to know how you plan to use it and what kind of setup
+        fits your life.</p>
+      <p>This page gives a quick overview of some popular Kei truck models and the types of
+        builds they are usually used for.</p></section>
+    <!-- Table section -->
+    <section class="card guide-table-section">
+      <h2>Example Kei Truck Setups</h2>
+      <p class="guide-subtext">
+        These are just example builds to get ideas going. A lot of Kei trucks can be used
+        in more than one way.</p>
+      <div class="kei-table-wrapper">
+        <table class="kei-table">
+          <caption>Real Kei Truck Models and Common Uses</caption>
+          <thead>
+            <tr>
+              <th>Model</th>
+              <th>Drive</th>
+              <th>Best For</th>
+              <th>Pros</th>
+              <th>Things to Consider</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Honda Acty 4WD (farm style)</td>
+              <td>4WD</td>
+              <td>Small farm work, acreage, hauling tools and feed</td>
+              <td>
+                Simple and reliable, flat bed is easy to load, good fuel mileage for daily chores
+              </td>
+              <td>
+                Most Actys are older now, so check for rust and plan on slower highway speeds
+              </td>
+            </tr>
+            <tr>
+              <td>Suzuki Carry DA63T (lifted build)</td>
+              <td>4WD</td>
+              <td>Trails, camping trips, mild off road exploring</td>
+              <td>
+                Popular platform for lift kits and bigger tires, tons of parts and aftermarket support
+              </td>
+              <td>
+                Lifted trucks ride stiffer on pavement and aggressive tires are louder and wear faster
+              </td>
+            </tr>
+            <tr>
+              <td>Daihatsu Hijet (street mini truck)</td>
+              <td>RWD / 4WD</td>
+              <td>Street builds, cars and coffee, cruising around town</td>
+              <td>
+                Great for lowered “mini truck” style builds, tons of character, easy to park anywhere
+              </td>
+              <td>
+                Lowered trucks have less ground clearance and can scrape on speed bumps and driveways
+              </td>
+            </tr>
+            <tr>
+              <td>Subaru Sambar (topper + racks)</td>
+              <td>4WD</td>
+              <td>Light contractor work, handyman setup, mobile tool hauler</td>
+              <td>
+                Works well with toppers and roof racks, enclosed bed keeps tools out of the weather
+              </td>
+              <td>
+                Added topper and racks add weight, so expect slightly less fuel mileage and performance
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+      <p class="guide-footnote">
+        No matter which model you like, double check your state or local laws for on road use,
+        and try to get a pre purchase inspection before you buy.
+      </p>
     </section>
+    <p class="top-link"><a href="#top">Back to top</a></p>
   </main>
-<p class="top-link"><a href="#top">Back to top</a></p>
   <footer class="site-footer">
     <p>&copy; 2025 Hayden Lasher</p>
   </footer>
