--- a/guide.html
+++ b/guide.html
@@ -19,6 +19,7 @@
     <h1>
       <i class="fa-solid fa-map-signs" aria-hidden="true"></i>
       Kei Truck Buying Guide
+        <i class="fa-solid fa-map-signs fa-flip-horizontal" aria-hidden="true"></i>
     </h1>
     <nav aria-label="Main">
       <ul class="nav">
