--- a/guide.html
+++ b/guide.html
@@ -36,7 +36,7 @@
     <section class="card guide-hero">
       <p class="guide-tagline">Thinking about a Kei truck?</p>
       <h2>Pick the truck that matches how you’ll actually use it</h2>
-      <p>Kei trucks look tiny and cute, but they are real workhorses. Before you import one
+      <p>Kei trucks look tiny and benign, but they are real workhorses. Before you import one
         or buy one locally, it helps to know how you plan to use it and what kind of setup
         fits your life.</p>
       <p>This page gives a quick overview of some popular Kei truck models and the types of
