--- a/guide.html
+++ b/guide.html
@@ -108,12 +108,13 @@
         </table>
       </div>
       <p class="guide-footnote">
-        No matter which model you like, double check your state or local laws for on road use,
+        Of course there's many more makes and models. These are just very common ones. No matter which model you like, double check your state or local laws for on road use,
         and try to get a pre purchase inspection before you buy.
       </p>
     </section>
     <p class="top-link"><a href="#top">Back to top</a></p>
   </main>
+  <img src="which-Kei-truck.jpg" alt="Kei truck models" class="guide-bottom-image">
   <footer class="site-footer">
     <p>&copy; 2025 Hayden Lasher</p>
   </footer>
