--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
       </p>
     </section>
   </main>
+  <p class="top-link"><a href="#top">Back to top</a></p>
   <footer class="site-footer">
     <p>&copy; 2025 Hayden Lasher</p>
   </footer>
